<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_padding"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_from_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_euro"
        app:layout_constraintStart_toStartOf="@+id/tv_input_number"
        app:layout_constraintBottom_toBottomOf="@+id/tv_updated_at" />

    <Button
        android:id="@+id/bt_get_currencies"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_latest_currencies"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_input_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_updated_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/bt_get_currencies"
        app:layout_constraintTop_toBottomOf="@+id/bt_get_currencies" />

    <TextView
        android:id="@+id/tv_input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:ems="10"
        android:gravity="end|center_vertical"
        android:maxLength="12"
        android:textSize="48sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_updated_at" />

    <TextView
        android:id="@+id/tv_convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_to"
        app:layout_constraintBottom_toBottomOf="@+id/sp_available_rates"
        app:layout_constraintStart_toStartOf="@+id/tv_input_number"
        app:layout_constraintTop_toTopOf="@+id/sp_available_rates" />

    <Spinner
        android:id="@+id/sp_available_rates"
        style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="@+id/bt_convert"
        app:layout_constraintLeft_toRightOf="@+id/tv_convert_to"
        app:layout_constraintTop_toTopOf="@+id/bt_convert" />

    <Button
        android:id="@+id/bt_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_big"
        android:layout_marginStart="@dimen/huge_margin"
        android:text="@string/convert"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_input_number"
        app:layout_constraintStart_toEndOf="@+id/sp_available_rates"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_number" />

    <TextView
        android:id="@+id/tv_converted_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:ems="10"
        android:gravity="end|center_vertical"
        android:maxLength="12"
        android:textSize="48sp"
        app:layout_constraintTop_toBottomOf="@+id/bt_convert" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/double_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:gravity="fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_converted_number"
        app:layout_goneMarginTop="@dimen/standard_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/bt_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/seven_digit" />

            <Button
                android:id="@+id/bt_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/eight_digit" />

            <Button
                android:id="@+id/bt_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/nine_digit" />

            <Button
                android:id="@+id/bt_divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onOperator"
                android:text="@string/divide_operator" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/bt_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/four_digit" />

            <Button
                android:id="@+id/bt_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/five_digit" />

            <Button
                android:id="@+id/bt_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/six_digit" />

            <Button
                android:id="@+id/bt_multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onOperator"
                android:text="@string/multiply_operator" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/bt_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/one_digit" />

            <Button
                android:id="@+id/bt_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/two_digit" />

            <Button
                android:id="@+id/bt_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/three_digit" />

            <Button
                android:id="@+id/bt_subtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onOperator"
                android:text="@string/minus_operator" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/bt_decimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDecimalPoint"
                android:text="@string/dot" />

            <Button
                android:id="@+id/bt_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/zero_digit" />

            <Button
                android:id="@+id/bt_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onClear"
                android:text="@string/clear" />

            <Button
                android:id="@+id/bt_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onOperator"
                android:text="@string/plus_operator" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/bt_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onEqual"
                android:text="@string/equals_operator" />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="@dimen/elevation_standard"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>